--- a/styles.css
+++ b/styles.css
@@ -645,7 +645,9 @@ section {
 
 .nav-links a:hover {
   opacity: 1;
-  color: var(--shadow);
+  color: var(--paper);
+  background: var(--signal);
+  border-radius: 0.5em;
 }
 
 /* Mobiili: pinottu paneeli + animointi (yhteensopiva aiemman koodin kanssa) */
@@ -656,7 +658,7 @@ section {
     /* tai var(--header-height) */
     left: 0;
     right: 0;
-    background: var(--header-bg);
+    background: var(--paper);
     box-shadow: var(--box-shadow);
     flex-direction: column;
     align-items: flex-start;
@@ -666,6 +668,7 @@ section {
     opacity: 0;
     transition: transform .2s ease, opacity .2s ease;
     z-index: 1001;
+    /*! color: var(--paper); */
   }
 
   .nav-links.active {
@@ -675,8 +678,10 @@ section {
   }
 
   .nav-links a {
-    width: 100%;
+    width: 96vw;
     padding: .75rem 0;
+    text-align: center;
+    border-radius: 0.5em;
   }
 }
 
