--- a/styles.css
+++ b/styles.css
@@ -494,7 +494,7 @@ details {
 }
 footer {
     position: relative;
-    background: var(--tile-red) !important;
+    background: var(--moss-green) !important;
     color: var(--beige) !important;
     border: none !important;
     bottom: 0 !important;
