--- a/partials/header.html
+++ b/partials/header.html
@@ -33,10 +33,9 @@
     <nav class="nav" aria-label="Päävalikko">
       <ul class="nav-links" id="nav-primary" role="menu">
         <!-- NAV:START -->
-                 <li role="none"><a role="menuitem" href="./#hours">Aukioloajat</a></li>
+
         <li role="none"><a role="menuitem" href="./#tenants">Liikkeet &amp; palvelut</a></li>
-        <li role="none"><a role="menuitem" href="./info-pysakointi.html">Pysäköinti</a></li>
-        <li role="none"><a role="menuitem" href="./#location">Saapuminen</a></li>
+        <li role="none"><a role="menuitem" href="./#location">Pysäköinti &amp; saapuminen</a></li>
         <li role="none"><a role="menuitem" href="./info-yhteystiedot.html">Yhteystiedot</a></li>
         <li role="none"><a role="menuitem" href="./info-liiketilavuokraus.html">Liiketilavuokraus</a></li>
         <!-- NAV:END -->
